--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
     <meta name="theme-color" content="#000000">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/images/eds_32x22.png">
     {% include analytics_head.html %}
   </head>
 
@@ -28,7 +28,7 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/home">Home</a>
+              <a href="{{ site.baseurl }}/">Home</a>
               <a href="{{ site.baseurl }}/registration">Registration</a>
               <a href="{{ site.baseurl }}/schedule">Schedule</a>
               <!--<a href="{{ site.baseurl }}/about">Speakers </a>
