--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
             </div>
             <img src="{{ site.baseurl }}/assets/images/EU_Emblem.png" style="width:50%"> <br/>
             <font size="-1">
-              This project has received funding from the European Union’s Horizon Europe research and innovation programme under grant agreement 101120237 (ELIAS).<br/>
+              This project has received funding from the European Union’s Horizon Europe research and innovation programme under grant agreement No. 101120237 (ELIAS) and No. 951847 (ELISE).<br/>
             </font>
             <!--{% include svg-icons.html %}-->
           </footer>
