--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,11 @@
         flex: 0 0 auto;
         width: 100%; /* Adjust the width as needed */
       }
+      .center-section {
+        display: flex;
+        align-items: center;
+        justify-content: center
+      }
     </style>
   </head>
 
