added Contact page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,17 @@
         align-items: center;
         justify-content: center
       }
+      .image-container {
+          display: flex;
+          align-items: center;
+          margin-bottom: 20px;
+      }
+
+      .image-container img {
+          width: 200px; /* Adjust image width as needed */
+          height: auto;
+          margin-right: 10px;
+      }
     </style>
   </head>
 
@@ -56,9 +67,9 @@
               <!--<a href="{{ site.baseurl }}/about">Speakers </a>
               <a href="{{ site.baseurl }}/">Companies</a>
               <a href="{{ site.baseurl }}/getting-started">Venue</a>
-              <a href="{{ site.baseurl }}/search">Organisers</a>
-              <a href="{{ site.baseurl }}/about">Travel </a>-->
+              <a href="{{ site.baseurl }}/search">Organisers</a>-->
               <a href="{{ site.baseurl }}/faq">FAQ </a>
+              <a href="{{ site.baseurl }}/contact">Contact </a>
             </nav>
           </header>
         </div>
