--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,8 +66,8 @@
               <a href="{{ site.baseurl }}/schedule">Schedule</a>
               <!--<a href="{{ site.baseurl }}/about">Speakers </a>
               <a href="{{ site.baseurl }}/">Companies</a>
-              <a href="{{ site.baseurl }}/getting-started">Venue</a>
-              <a href="{{ site.baseurl }}/search">Organisers</a>-->
+              <a href="{{ site.baseurl }}/getting-started">Venue</a>-->
+              <a href="{{ site.baseurl }}/search">Organisers</a>
               <a href="{{ site.baseurl }}/industries">Industries</a>
               <a href="{{ site.baseurl }}/faq">FAQ </a>
               <a href="{{ site.baseurl }}/contact">Contact </a>
