--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,9 +86,10 @@
         <div class="container">
           <footer class="footer">
             <div class="container">
-                <a href="https://elias-ai.eu/" target="_blank"> <img src="{{ site.baseurl }}/assets/images/ELIAS_LOGO.png" style="margin-right: 100px;width:40%"> </a>
-                <a href="https://www.elise-ai.eu/" target="_blank"><img src="{{ site.baseurl }}/assets/images/Elise-black-text-logo@2x.png" style="width:40%"></a><br/>
-                <a href="https://ellis.eu/" target="_blank"> <img src="{{ site.baseurl }}/assets/images/20230223_ELLIS_Logo_RGB_hor_subline.png" style="width:69%; margin-bottom: 40px"> </a>
+                <a href="https://elias-ai.eu/" target="_blank"> <img src="{{ site.baseurl }}/assets/images/ELIAS_LOGO.png" style="margin-right: 30px;width:33%"> </a>
+                <a href="https://www.elise-ai.eu/" target="_blank"><img src="{{ site.baseurl }}/assets/images/Elise-black-text-logo@2x.png" style="width:33%; margin-right: 30px;"></a>
+                <a href="https://www.elsa-ai.eu/" target="_blank"><img src="{{ site.baseurl }}/assets/images/elsa_logo_RGB_twocolor.png" style="width:20%"></a><br/>
+                <a href="https://ellis.eu/" target="_blank"> <img src="{{ site.baseurl }}/assets/images/20230223_ELLIS_Logo_RGB_hor_subline.png" style="width:69%; margin-bottom: 20px"> </a>
             </div>
             <img src="{{ site.baseurl }}/assets/images/EU_Emblem.png" style="width:50%"> <br/>
             <font size="-1">
