--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,7 @@
               <!--<a href="{{ site.baseurl }}/about">Speakers </a>
               <a href="{{ site.baseurl }}/">Companies</a>
               <a href="{{ site.baseurl }}/getting-started">Venue</a>-->
+              <a href="{{ site.baseurl }}/keynote_speakers">Keynote Speakers</a>
               <a href="{{ site.baseurl }}/travel">Travel Guide</a>
               <a href="{{ site.baseurl }}/organisers">Organisers</a>
               <a href="{{ site.baseurl }}/industries">Industries</a>
