--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,9 +69,10 @@
               <a href="{{ site.baseurl }}/getting-started">Venue</a>-->
               <a href="{{ site.baseurl }}/keynote_speakers">Keynote Speakers</a>
               <a href="{{ site.baseurl }}/travel">Travel Guide</a>
-              <a href="{{ site.baseurl }}/organisers">Organisers</a>
+              <a href="{{ site.baseurl }}/eds_mobility_grants">EDS Mobility Grants</a>
               <a href="{{ site.baseurl }}/industries">Industries</a>
               <a href="{{ site.baseurl }}/faq">FAQ </a>
+              <a href="{{ site.baseurl }}/organisers">Organisers</a>
               <a href="{{ site.baseurl }}/contact">Contact </a>
             </nav>
           </header>
