--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,12 +65,12 @@
               <a href="{{ site.baseurl }}/registration">Registration</a>
               <a href="{{ site.baseurl }}/schedule">Schedule</a>
               <!--<a href="{{ site.baseurl }}/about">Speakers </a>
-              <a href="{{ site.baseurl }}/">Companies</a>
               <a href="{{ site.baseurl }}/getting-started">Venue</a>-->
               <a href="{{ site.baseurl }}/keynote_speakers">Keynote Speakers</a>
               <a href="{{ site.baseurl }}/travel">Travel Guide</a>
               <a href="{{ site.baseurl }}/eds_mobility_grants">EDS Mobility Grants</a>
               <a href="{{ site.baseurl }}/industries">Industries</a>
+              <a href="{{ site.baseurl }}/sponsors">Sponsors</a>
               <a href="{{ site.baseurl }}/faq">FAQ </a>
               <a href="{{ site.baseurl }}/organisers">Organisers</a>
               <a href="{{ site.baseurl }}/contact">Contact </a>
