--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,27 @@
           height: auto;
           margin-right: 10px;
       }
+      .faq-section {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .faq-item {
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+        }
+        .faq-item summary {
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .faq-item summary:hover {
+            color: #007BFF;
+        }
+        .faq-item details[open] summary {
+            color: #007BFF;
+        }
     </style>
   </head>
 
