--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,7 @@
               <!--<a href="{{ site.baseurl }}/about">Speakers </a>
               <a href="{{ site.baseurl }}/getting-started">Venue</a>-->
               <a href="{{ site.baseurl }}/keynote_speakers">Keynote Speakers</a>
+              <a href="../assets/pdfs/Posters_EDS2024.pdf">Posters</a>
               <a href="{{ site.baseurl }}/travel">Travel Guide</a>
               <a href="{{ site.baseurl }}/eds_mobility_grants">EDS Mobility Grants</a>
               <a href="{{ site.baseurl }}/industries">Industries</a>
